# Non-custodial-DEX-Traded-Funds

./: .gitignore  README.md  asset-manifest.json  index.html
fund/: Cargo.toml
fund-tests/: .env  Cargo.toml
fund-tests/src/: print.rs  token.rs
fund-tests/tests/: functional.rs
fund-tests/tests/helpers/: token.rs
fund/src/: instruction.rs  lib.rs  processor.rs  state.rs
index-maker/: Cargo.toml
index-maker/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  util.rs
index-maker/src/state/: formula.rs  index.rs
index-maker/tests/: functional.rs
js/: package-lock.json  package.json  tsconfig.json
js/client/: fund.ts
programs/fund/: .gitignore  .rustfmt.toml  Cargo.toml
programs/fund-tests/: .gitignore  Cargo.toml
programs/fund-tests/src/: client.rs  lib.rs  print.rs  token.rs
programs/fund-tests/tests/helpers/: client.rs
programs/fund/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
programs/serum-pool/: Cargo.toml
programs/serum-pool/schema/: Cargo.toml
programs/serum-pool/schema/src/: schema.rs
programs/serum-pool/src/: context.rs
serum-pool/: .gitignore
serum-pool/examples/simple/: Cargo.toml
serum-pool/schema/src/: schema.rs
serum-pool/src/: context.rs  lib.rs  pool.rs
static/css/: 3.1ef3659a.chunk.css  3.1ef3659a.chunk.css.map  3.2704e646.chunk.css  3.2704e646.chunk.css.map  3.cdb5fdf4.chunk.css  3.cdb5fdf4.chunk.css.map  4.00c3f4ff.chunk.css  4.00c3f4ff.chunk.css.map  4.a1543b3b.chunk.css  4.a1543b3b.chunk.css.map  4.ceb32b99.chunk.css  4.ceb32b99.chunk.css.map  4.e68d0f76.chunk.css  4.e68d0f76.chunk.css.map  main.0f786ec7.chunk.css  main.0f786ec7.chunk.css.map  main.22dd87af.chunk.css  main.22dd87af.chunk.css.map  main.696b02ad.chunk.css  main.696b02ad.chunk.css.map  main.752c15ba.chunk.css  main.752c15ba.chunk.css.map  main.7bc3fde4.chunk.css  main.7bc3fde4.chunk.css.map  main.a57c2b2a.chunk.css  main.a57c2b2a.chunk.css.map  main.bd7c2b3c.chunk.css  main.bd7c2b3c.chunk.css.map
static/js/: 2.1c7106d3.chunk.js  2.1c7106d3.chunk.js.LICENSE.txt  2.1c7106d3.chunk.js.map  2.3c52ec92.chunk.js  2.3c52ec92.chunk.js.LICENSE.txt  2.79bf4131.chunk.js  2.79bf4131.chunk.js.map  2.89de39cd.chunk.js  2.89de39cd.chunk.js.map  2.97d14614.chunk.js  2.97d14614.chunk.js.map  2.b5904e86.chunk.js  2.b5904e86.chunk.js.map  2.cf09e4b3.chunk.js  2.d8b32b64.chunk.js  2.d8b32b64.chunk.js.LICENSE.txt  2.d8b32b64.chunk.js.map  3.05836307.chunk.js  3.05836307.chunk.js.map  3.12e60252.chunk.js  3.12e60252.chunk.js.map  3.67e240a1.chunk.js  3.67e240a1.chunk.js.map  3.6b4c1ea6.chunk.js  3.6b4c1ea6.chunk.js.map  3.73518b39.chunk.js  3.73518b39.chunk.js.map  3.8487f0fb.chunk.js  3.8487f0fb.chunk.js.map  3.8570eef3.chunk.js  3.8570eef3.chunk.js.map  3.9e28233f.chunk.js  3.9e28233f.chunk.js.map  3.e85994cb.chunk.js  3.e85994cb.chunk.js.map  4.0a1c3663.chunk.js  4.0a1c3663.chunk.js.map  4.3a88435a.chunk.js  4.3a88435a.chunk.js.map  4.6d7fc0d7.chunk.js  (+71 more)
static/media/: TTFirsNeue-Bold.f2e8cb5a.eot  TTFirsNeue-ExtraBold.540d579b.eot  TTFirsNeue-Regular.0b723029.eot  TTFirsNeue-ThinItalic.040c3e71.eot
web/: .babelrc  .env.example  .eslintrc  .gitignore  README.md  config-overrides.js  package.json  tsconfig.json
web/public/: index.html
web/src/: App.tsx  index.tsx  routes.tsx
web/src/config/: funds.ts  index.ts  tokens.ts
web/src/models/: init.ts  types.d.ts
web/src/styles/: fonts.ts  ress.ts
web/src/types/: custom.d.ts  effector.d.ts
web/src/utils/: common.ts
(+117 files in other folders)
