[package]
name = "index-maker"
version = "0.1.0"
authors = ["Alexander Meshcheryakov <freecoder.xx@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.5.6"
thiserror = "1.0.23"

[dev-dependencies]
solana-program-test = "1.5.6"
solana-sdk = "1.5.6"
tokio = { version = "0.3", features = ["macros"] }

[features]
no-entrypoint = []
default = []
