[package]
name = "serum-pool"
version = "0.1.0"
description = "Solana pool spec"
edition = "2018"

[features]
program = []
default = []

[dependencies]
serum-pool-schema = { version = "0.1.0", path = "./schema" }
arrayref = "0.3.6"
solana-program = "1.5.11"
spl-token = { version = "3.1.0", features = ["no-entrypoint"] }
thiserror = "1.0.24"
zerocopy = "0.3.0"
bytemuck = "1.5.1"
slice-of-array = "0.2.1"
serum-borsh = "0.8.1-serum.1"
anyhow = { version = "1.0.38", default-features = false }
hex = "0.4.2"
base64 = "0.13.0"

[lib]
name = "serum_pool"
crate-type = ["cdylib", "lib"]
